# Video2WebP

./: README.md  package-lock.json  package.json
scripts/: download-ffmpeg.sh
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ConversionQueue.vue  FileDropZone.vue  SettingsPanel.vue
src/types/: index.ts
